--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.0",
   "private": true,
   "main": "dist/index.js",
-  "homepage": "https://creativetimofficial.github.io/now-ui-dashboard-react/#/dashboard",
+  "homepage": "",
   "dependencies": {
     "@types/googlemaps": "3.30.12",
     "@types/markerclustererplus": "2.1.33",
@@ -12,7 +12,11 @@
     "axios": "^0.18.0",
     "bootstrap": "4.1.3",
     "chart.js": "2.7.1",
+    "firebase": "^6.2.0",
+    "firebase-tools": "^7.0.1",
+    "firebaseui": "^4.0.0",
     "formik": "^1.3.1",
+    "global": "^4.4.0",
     "history": "4.7.2",
     "i18next": "^11.10.1",
     "jquery": "3.3.1",
@@ -22,6 +26,7 @@
     "perfect-scrollbar": "1.4.0",
     "primeicons": "^1.0.0",
     "primereact": "2.0.1",
+    "query-string": "^6.8.1",
     "react": "16.4.2",
     "react-chartjs-2": "2.7.4",
     "react-dom": "16.4.2",
@@ -54,8 +59,8 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-import-rename": "^1.0.1",
+    "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-es2015": "^6.24.1"
