--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "now-ui-dashboard-react",
+  "name": "my-task-manager-app",
   "version": "1.1.0",
   "private": true,
   "main": "dist/index.js",
